--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
+
+target/
 *.class
 *.log
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.idea/
+
+.bloop/
+.metals/
+.bsp/
+.vscode/
+
+out/
+
+.scala-build/
+
+hepek_output/
+
+
+
+
+
+
