--- a/openapi4s/src/test/resources/oneOf.yaml
+++ b/openapi4s/src/test/resources/oneOf.yaml
@@ -32,6 +32,7 @@ components:
           type: boolean
         age:
           type: integer
+          maximum: 100
     Pet:
       oneOf:
         - $ref: "#/components/schemas/Cat"
