--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,8 +7,8 @@ on:
 env:
   PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
   PGP_SECRET: ${{ secrets.PGP_SECRET }}
-  SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-  SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+  MILL_SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+  MILL_SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
 
 jobs:
   tests:
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: '11'
       - name: Import GPG key
         uses: crazy-max/ghaction-import-gpg@v6
@@ -31,10 +31,8 @@ jobs:
           passphrase: ${{ secrets.PGP_PASSPHRASE }}
       - name: Publish
         run: >
-          ./mill -i mill.scalalib.PublishModule/publishAll \
+          ./mill -i mill.scalalib.SonatypeCentralPublishModule/publishAll \
               --gpgArgs --passphrase=$PGP_PASSPHRASE,--no-tty,--pinentry-mode,loopback,--batch,--yes,-a,-b \
               --publishArtifacts __.publishArtifacts \
               --readTimeout 600000 \
-              --awaitTimeout 600000 \
-              --release true \
-              --signed true
+              --awaitTimeout 600000
